adds suport to cpu_load

--- a/html/index.html
+++ b/html/index.html
@@ -361,6 +361,14 @@ $('document').ready(function() {
         <div id="mod-settings" class="icon"></div>
         <div id="mod-bluetooth" class="icon"></div>
         <div id="mod-cloud" class="icon"></div>
+        <div id="mod-cpu" class="icon">
+          <div class="progress">
+            <div class="bar" id="cpu-bar" style="width: 80%;"></div>
+          </div>
+          <p class="progress-title">
+            cpu
+          </p>
+        </div>
     </div>
     <!-- END MAIN MENU-->
 
