Remove all/installed/not-installed radio-boxes on plugin search

--- a/html/index.html
+++ b/html/index.html
@@ -400,18 +400,7 @@ $('document').ready(function() {
         <!-- EFFECTS LIBRARY SETTINGS WINDOW -->
         <div id="plugins-library-settings-window">
             <form class="box form-inline">
-                <h1>Plugin's Search Filters</h1>
-                <div class="control-group">
-                    <label class="radio">
-                        <input type="radio" name="mode" value="all"> All
-                    </label>
-                    <label class="radio">
-                        <input type="radio" name="mode" value="installed"> Installed
-                    </label>
-                    <label class="radio">
-                        <input type="radio" name="mode" value="not-installed"> Not Installed
-                    </label>
-                </div>
+                <h1>Plugin Search</h1>
                 <div class="control-group">
                     <label>Keywords</label>
                     <br/>
