communication between browser / javascript and tornado using websockets

--- a/html/index.html
+++ b/html/index.html
@@ -48,6 +48,7 @@
     <script type="text/javascript" src="js/lib/sprintf-0.6.js"></script>
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js?v={{version}}"></script>
     <script type="text/javascript" src="js/lib/jquery.textareaAutoResize.js?v={{version}}"></script>
+    <script type="text/javascript" src="js/lib/n3-browser.min.js?v={{version}}"></script>
 
     <script type="text/javascript">
 
@@ -136,6 +137,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/bluetooth.js?v={{version}}"></script>
 <script type="text/javascript" src="js/upgrade.js?v={{version}}"></script>
 <script type="text/javascript" src="js/xrun.js?v={{version}}"></script>
+<script type="text/javascript" src="js/ingen.js?v={{version}}"></script>
 
 </head>
 <body>
