Push of incomplete/testing code

--- a/html/index.html
+++ b/html/index.html
@@ -40,6 +40,11 @@
     <!-- SLIDER -->
     <link rel="stylesheet" type="text/css" href="resources/sliders/slider01/slider.css?v={{version}}"/>
 
+    <script type="text/javascript">
+      // for mod-app control
+      var desktop = null
+    </script>
+
     <script type="text/javascript" src="js/lib/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery-ui-1.10.1.custom.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.ui.touch-punch.min.js?v={{version}}"></script>
@@ -73,8 +78,6 @@
       var JS_CUSTOM_CHANNEL = {{js_custom_channel}}
       var AUTO_CLOUD_BACKUP = {{auto_cloud_backup}}
 
-      // for mod-app control
-      var desktop = null
 
 $('<script>').attr('src', PACKAGE_SERVER_ADDRESS+'/js/system.js').appendTo($('head'))
 
@@ -194,7 +197,7 @@ $('document').ready(function() {
                         <div class="control-group">
                             <label>E-mail</label>
                             <div class="mod-controls">
-                                <input type="text" name="id"/>
+                                <input type="text" name="user_id"/>
                             </div>
                         </div>
                         <div class="control-group">
@@ -219,17 +222,22 @@ $('document').ready(function() {
                     <!-- The div below will hold error message. It must have class "error" -->
                     <div class="error hidden"></div>
                     <form class="bottom form-horizontal">
-                        <input type="hidden" name="sid" value="by javascript"/>
                         <div class="control-group">
-                            <label>E-mail</label>
+                            <label>User ID</label>
                             <div class="mod-controls">
-                                <input type="text" name="email"/>
+                                <input type="text" name="user_id"/>
                             </div>
                         </div>
                         <div class="control-group">
                             <label>Name</label>
                             <div class="mod-controls">
                                 <input type="text" name="name"/>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label>E-mail</label>
+                            <div class="mod-controls">
+                                <input type="text" name="email"/>
                             </div>
                         </div>
                         <div class="control-group">
