supports the samplerate port property

--- a/html/index.html
+++ b/html/index.html
@@ -56,6 +56,7 @@
       {% autoescape None %}
       var TEMPLATES = {}
       SITEURL = '{{cloud_url}}'.replace(/\/?$/, '/api')
+      var SAMPLERATE = {{sampleRate}}
       var NOTIFICATIONS_ENABLED = true
       var HARDWARE_PROFILE = JSON.parse(atob('{{hardware_profile}}'))
       var DEFAULT_ICON_TEMPLATE = '{{default_icon_template}}'
