--- a/html/icon.html
+++ b/html/icon.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/dashboard.css"/>
 
     <!-- PEDALS -->
-    <link rel="stylesheet" type="text/css" href="resources/pedals/pedals.css"/>
+    <link rel="stylesheet" type="text/css" href="css/pedals.css"/>
 
     <!-- DEFAULT -->
     <link rel="stylesheet" type="text/css" href="resources/pedals/default.css"/>
