--- a/html/index.html
+++ b/html/index.html
@@ -460,10 +460,18 @@ $('document').ready(function() {
                 </h1>
                 <!-- <span class="close btn btn-danger js-close">Close</span> -->
             </header>
-            <div class="form-horizontal filter clearfix">
+            <div class="form-vertical filter clearfix">
                 <div class="control-group">
                     <label>Keywords</label><br/>
                     <input type="search"/>
+                </div>
+                <div class="control-group">
+                    <input type="radio" name="installed" value="all" id="cloud-plugins-all" checked />
+                    <label for="cloud-plugins-all">All</label>
+                    <input type="radio" name="installed" value="installed" id="cloud-plugins-installed" />
+                    <label for="cloud-plugins-installed">Installed</label>
+                    <input type="radio" name="installed" value="not-installed" id="cloud-plugins-uninstalled" />
+                    <label for="cloud-plugins-uninstalled">Not Installed</label>
                 </div>
                 <ul class="categories control-group">
                     <li id="cloud-plugin-tab-All">All</li>
