--- a/html/index.html
+++ b/html/index.html
@@ -79,7 +79,11 @@
       var AVATAR_URL = '{{avatar_url}}'
       var JS_CUSTOM_CHANNEL = {{js_custom_channel}}
       var AUTO_CLOUD_BACKUP = {{auto_cloud_backup}}
-
+      var DEBUG = true;
+      if (!DEBUG) {
+          console = console || {}
+          console.log = function() {}
+      }
 
 $('<script>').attr('src', PACKAGE_SERVER_ADDRESS+'/js/system.js').appendTo($('head'))
 
