Change to new API url

--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,7 @@
       {% autoescape None %}
       var TEMPLATES = {}
       SITEURL    = '{{cloud_url}}'.replace(/\/?$/, '/api')
-      SITEURLNEW = "http://social.dev.portalmod.com/api"
+      SITEURLNEW = "http://api.dev.portalmod.com"
       var SAMPLERATE = {{sampleRate}}
       var NOTIFICATIONS_ENABLED = true
       var HARDWARE_PROFILE = JSON.parse(atob('{{hardware_profile}}'))
