--- a/html/pedalboard.html
+++ b/html/pedalboard.html
@@ -59,6 +59,7 @@
 
       var JS_CUSTOM_CHANNEL = false
       var AUTO_CLOUD_BACKUP = false
+      var SAMPLERATE        = 48000
 
       $('document').ready(function() {
           var el = $('#pedalboard-dashboard').pedalboard({
