--- a/html/index.html
+++ b/html/index.html
@@ -431,7 +431,7 @@ $('document').ready(function() {
 
         <!-- EFFECTS OF A CATEGORY -->
         <div id="plugins-list" class="js-effects-list">
-            <div class="nav nav-left"><img src="img/nav-left.png"/></div>
+            <div class="nav nav-left"></div>
             <div id="plugins-results">
                 <div id="plugin-results-wrapper">
                     <div id="effect-content-All" class="plugins-wrapper"></div>
@@ -448,7 +448,7 @@ $('document').ready(function() {
                     <div id="effect-content-Utility" class="plugins-wrapper"></div>
                 </div>
             </div>
-            <div class="nav nav-right"><img src="img/nav-right.png"/></div>
+            <div class="nav nav-right"></div>
         </div>
         <!-- END EFFECTS OF A CATEGORY -->
     </div>
