--- a/html/index.html
+++ b/html/index.html
@@ -12,9 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/pedals.css?v={{version}}"/>
 
     <!-- DEFAULT -->
-    <link rel="stylesheet" type="text/css" href="resources/pedals/default.css"/>
-    <link rel="stylesheet" type="text/css" href="resources/pedals/lata/lata.css"/>
-    <link rel="stylesheet" type="text/css" href="resources/knobs/lata/lata.css"/>
+    <link rel="stylesheet" type="text/css" href="resources/pedals/default.css?v={{version}}"/>
 
     <script type="text/javascript">
       // for mod-app control
