--- a/html/icon.html
+++ b/html/icon.html
@@ -33,7 +33,7 @@
           if (uri) {
               $.ajax({
                   url: '/effect/get/',
-                  data: { url: uri },
+                  data: { uri: uri },
                   success: function(effect, options) {
                       icongui = new GUI(effect)
                       icongui.render(null, function(icon, settings) {
@@ -53,7 +53,7 @@
 
     <style type="text/css" media="screen">
     body {
-        background: transparent !important;
+        background: transparent;
     }
     body, div {
         -webkit-touch-callout: none;
@@ -69,12 +69,20 @@
     }
     #pedalboard-dashboard {
         top: 0px;
+        background: transparent;
     }
     #pedalboard-dashboard .mod-pedal .mod-drag-handle,
+    #pedalboard-dashboard .mod-pedal .mod-audio-input,
+    #pedalboard-dashboard .mod-pedal .mod-audio-output,
+    #pedalboard-dashboard .mod-pedal .mod-midi-input,
+    #pedalboard-dashboard .mod-pedal .mod-midi-output,
     #pedalboard-dashboard .mod-pedal .mod-pedal-input-image,
     #pedalboard-dashboard .mod-pedal .mod-pedal-output-image {
         display: none;
         visibility: hidden;
+    }
+    #pedalboard-dashboard > .mod-pedal > div:first-child {
+        box-shadow: none;
     }
     </style>
 
