CSS icons class with makefile for generating black and white versions together with dynamic icons.css More on preset manager

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/dashboard.css?v={{version}}"/>
     <link rel="stylesheet" type="text/css" href="css/social.css?v={{version}}"/>
     <link rel="stylesheet" type="text/css" href="css/fonts.css?v={{version}}"/>
+    <link rel="stylesheet" type="text/css" href="img/icons/icons.css?v={{version}}"/>
     <!-- PEDALS -->
     <link rel="stylesheet" type="text/css" href="css/pedals.css?v={{version}}"/>
 
@@ -127,7 +128,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/presets.js?v={{version}}"></script>
 
 </head>
-<body>
+<body class="mod-dark">
 
   <!-- NOTIFICATIONS -->
 
