More on presetManager (basically working); a couple of new icons; cleanup;

--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,9 @@
     <script type="text/javascript" src="js/lib/jquery.textareaAutoResize.js?v={{version}}"></script>
     <script type="text/javascript" src="js/lib/n3-browser.min.js?v={{version}}"></script>
     <script type="text/javascript" src="js/lib/arrive.min.js?v={{version}}"></script>
-
+    
+    <script type="text/javascript" src="js/constants.js?v={{version}}"></script>
+    
     <script type="text/javascript">
 
       {% autoescape None %}
