Fix icon and icon-all for modguis with sample rate

--- a/html/icon.html
+++ b/html/icon.html
@@ -21,11 +21,9 @@
     <script type="text/javascript" src="js/lib/sprintf-0.6.js"></script>
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js"></script>
 
-    <script type="text/javascript" src="js/common.js"></script>
-    <script type="text/javascript" src="js/modgui.js"></script>
-
     <script type="text/javascript">
-      var icongui = null
+      var icongui    = null
+      var SAMPLERATE = 48000
 
       $(document).ready(function() {
           var uri = window.location.hash.replace(/^#/, '')
@@ -48,8 +46,10 @@
               })
           }
       })
-
     </script>
+
+    <script type="text/javascript" src="js/common.js"></script>
+    <script type="text/javascript" src="js/modgui.js"></script>
 
     <style type="text/css" media="screen">
     body {
