--- a/html/icon.html
+++ b/html/icon.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <link rel="stylesheet" type="text/css" href="css/dashboard.css"/>
+    <link rel="stylesheet" type="text/css" href="css/fonts.css"/>
 
     <!-- PEDALS -->
     <link rel="stylesheet" type="text/css" href="css/pedals.css"/>
