Start rework of social feed; Make pedalboards bg transparent

--- a/html/icon-all.html
+++ b/html/icon-all.html
@@ -57,6 +57,9 @@
         -o-user-select: none;
         user-select: none;
     }
+    #wrapper {
+        overflow: hidden;
+    }
     #pedalboard-dashboard {
         top: 0px;
         background: transparent;
