--- a/html/pedalboard.html
+++ b/html/pedalboard.html
@@ -75,7 +75,25 @@
     <script type="text/javascript" src="js/xrun.js"></script>
 
     <style type="text/css" media="screen">
-    body { background:transparent !important;}
+    body {
+        background:transparent !important;
+    }
+    body, div {
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -o-user-select: none;
+        user-select: none;
+    }
+    #wrapper {
+        overflow: hidden;
+    }
+    #pedalboard-dashboard {
+        top: 0px;
+        background: transparent;
+    }
     </style>
 
 </head>
