Add simple button to switch between feed and timeline

--- a/html/index.html
+++ b/html/index.html
@@ -99,6 +99,7 @@ $('document').ready(function() {
       bluetoothIcon: $('#mod-bluetooth'),
       upgradeWindow: $('#mod-upgrade'),
       upgradeIcon: $('#mod-settings'),
+      feedButton: $('#cloud-feed-timeline'),
       login: $('#login'),
       logout: $('#logout')
   })
@@ -735,6 +736,7 @@ $('document').ready(function() {
                 </form>
               </li>
 	      -->
+              <li class="feed"><a id="cloud-feed-timeline">Feed</a></li>
               <li class="login"><a id="login">Login</a></li>
               <li class="logout"><a id="logout">Logout</a></li>
             </ul>
