Fix screenshot again

--- a/html/pedalboard.html
+++ b/html/pedalboard.html
@@ -50,6 +50,7 @@
                  })
              }
           })
+          //console.log(PEDALBOARD_DATA)
           el.pedalboard('unserialize', PEDALBOARD_DATA)
       })
 
