Fix dashboard bottom margin

--- a/html/pedalboard.html
+++ b/html/pedalboard.html
@@ -90,8 +90,9 @@
         overflow: hidden;
     }
     #pedalboard-dashboard {
-        top: 0px;
         background: transparent;
+        top: 0px;
+        bottom: 0px;
     }
     </style>
 
