Remove default test login

--- a/html/index.html
+++ b/html/index.html
@@ -187,13 +187,13 @@ $('document').ready(function() {
                         <div class="control-group">
                             <label>User ID</label>
                             <div class="mod-controls">
-                                <input type="text" name="user_id" value="uu05"/>
+                                <input type="text" name="user_id" value=""/>
                             </div>
                         </div>
                         <div class="control-group">
                             <label>Password</label>
                             <div class="mod-controls">
-                                <input type="password" name="password" value="uu05uu05"/>
+                                <input type="password" name="password" value=""/>
                             </div>
                         </div>
                         <div class="textright">
