Hide add-midi-device button under mod-app

--- a/html/index.html
+++ b/html/index.html
@@ -331,7 +331,7 @@ $('document').ready(function() {
                 <!-- <div class="favorite"></div> -->
                 <div class="actions">
                     <button class="js-add-midi btn btn-mini btn-warning">Add MIDI Device</button>
-                    <span class="separator"></span>
+                    <span class="separator" id="js-add-midi-separator"></span>
                     <button class="js-save btn btn-mini btn-warning">Save</button>
                     <button class="js-save-as btn btn-mini btn-warning">Save as</button>
                     <span class="separator"></span>
