--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,22 @@
 
     <script type="text/javascript" src="js/constants.js?v={{version}}"></script>
 
+
+    <!-- Lunr -->
+    <script src="js/lib/lunr/lunr.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/lunr/utils.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/lunr/tokenizer.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/lunr/pipeline.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/lunr/vector.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/lunr/sorted_set.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/lunr/event_emitter.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/lunr/index.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/lunr/document_store.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/lunr/stemmer.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/lunr/stop_word_filter.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/lunr/trimmer.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/lib/lunr/token_store.js" type="text/javascript" charset="utf-8"></script>
+
     <script type="text/javascript">
 
       {% autoescape None %}
