Pass environment and kernel info to browser

--- a/html/index.html
+++ b/html/index.html
@@ -79,7 +79,9 @@
 
       var INFO = {
           "hardware": {},
-          "python": {}
+          "env": {},
+          "python": {},
+          "uname": {}
       }
 
 // FIXME: what is this for?
